--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -14,7 +14,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1893 entries, 0 to 1892\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Mouse ID            1893 non-null   object \n",
+      " 1   Drug Regimen        1893 non-null   object \n",
+      " 2   Sex                 1893 non-null   object \n",
+      " 3   Age_months          1893 non-null   int64  \n",
+      " 4   Weight (g)          1893 non-null   int64  \n",
+      " 5   Timepoint           1893 non-null   int64  \n",
+      " 6   Tumor Volume (mm3)  1893 non-null   float64\n",
+      " 7   Metastatic Sites    1893 non-null   int64  \n",
+      "dtypes: float64(1), int64(4), object(3)\n",
+      "memory usage: 133.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import scipy.stats as st\n",
+    "\n",
+    "# Study data files\n",
+    "mouse_metadata_path = \"Data/Mouse_metadata.csv\"\n",
+    "study_results_path = \"Data/Study_results.csv\"\n",
+    "\n",
+    "# Read the mouse data and the study results\n",
+    "mouse_metadata = pd.read_csv(mouse_metadata_path)\n",
+    "study_results = pd.read_csv(study_results_path)\n",
+    "\n",
+    "# Combine the data into a single dataset\n",
+    "merged_data_df = pd.merge(mouse_metadata, study_results, how=\"outer\", on=\"Mouse ID\")\n",
+    "# Display the data table for preview\n",
+    "merged_data_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1893"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the number of mice.\n",
+    "merged_data_df[\"Mouse ID\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Mouse ID  Timepoint\n",
+      "908     g989          0\n",
+      "910     g989          5\n",
+      "912     g989         10\n",
+      "914     g989         15\n",
+      "916     g989         20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
+    "duplicate_data = pd.DataFrame(merged_data_df, columns=[\"Mouse ID\", \"Timepoint\"])\n",
+    "duplicate_data_rows = duplicate_data[duplicate_data.duplicated(keep = 'last')]\n",
+    "print(duplicate_data_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>910</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48.786801</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51.745156</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>914</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>15</td>\n",
+       "      <td>51.325852</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "      <td>20</td>\n",
+       "      <td>55.326122</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Mouse ID Drug Regimen     Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "908     g989     Propriva  Female          21          26          0   \n",
+       "910     g989     Propriva  Female          21          26          5   \n",
+       "912     g989     Propriva  Female          21          26         10   \n",
+       "914     g989     Propriva  Female          21          26         15   \n",
+       "916     g989     Propriva  Female          21          26         20   \n",
+       "\n",
+       "     Tumor Volume (mm3)  Metastatic Sites  \n",
+       "908           45.000000                 0  \n",
+       "910           48.786801                 0  \n",
+       "912           51.745156                 0  \n",
+       "914           51.325852                 1  \n",
+       "916           55.326122                 1  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Optional: Get all the data for the duplicate mouse ID. \n",
+    "dupilcateslist = merged_data_df.loc[[908,910,912,914,916],:]\n",
+    "dupilcateslist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -104,177 +320,56 @@
        "      <td>32.997729</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1888</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>25</td>\n",
-       "      <td>63.145652</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1889</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>65.841013</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1890</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>35</td>\n",
-       "      <td>69.176246</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1891</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>40</td>\n",
-       "      <td>70.314904</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1892</th>\n",
-       "      <td>z969</td>\n",
-       "      <td>Naftisol</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>9</td>\n",
-       "      <td>30</td>\n",
-       "      <td>45</td>\n",
-       "      <td>73.867845</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1893 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
-       "0        k403     Ramicane  Male          21          16          0   \n",
-       "1        k403     Ramicane  Male          21          16          5   \n",
-       "2        k403     Ramicane  Male          21          16         10   \n",
-       "3        k403     Ramicane  Male          21          16         15   \n",
-       "4        k403     Ramicane  Male          21          16         20   \n",
-       "...       ...          ...   ...         ...         ...        ...   \n",
-       "1888     z969     Naftisol  Male           9          30         25   \n",
-       "1889     z969     Naftisol  Male           9          30         30   \n",
-       "1890     z969     Naftisol  Male           9          30         35   \n",
-       "1891     z969     Naftisol  Male           9          30         40   \n",
-       "1892     z969     Naftisol  Male           9          30         45   \n",
+       "  Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "0     k403     Ramicane  Male          21          16          0   \n",
+       "1     k403     Ramicane  Male          21          16          5   \n",
+       "2     k403     Ramicane  Male          21          16         10   \n",
+       "3     k403     Ramicane  Male          21          16         15   \n",
+       "4     k403     Ramicane  Male          21          16         20   \n",
        "\n",
-       "      Tumor Volume (mm3)  Metastatic Sites  \n",
-       "0              45.000000                 0  \n",
-       "1              38.825898                 0  \n",
-       "2              35.014271                 1  \n",
-       "3              34.223992                 1  \n",
-       "4              32.997729                 1  \n",
-       "...                  ...               ...  \n",
-       "1888           63.145652                 2  \n",
-       "1889           65.841013                 3  \n",
-       "1890           69.176246                 4  \n",
-       "1891           70.314904                 4  \n",
-       "1892           73.867845                 4  \n",
-       "\n",
-       "[1893 rows x 8 columns]"
+       "   Tumor Volume (mm3)  Metastatic Sites  \n",
+       "0           45.000000                 0  \n",
+       "1           38.825898                 0  \n",
+       "2           35.014271                 1  \n",
+       "3           34.223992                 1  \n",
+       "4           32.997729                 1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Dependencies and Setup\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import scipy.stats as st\n",
-    "\n",
-    "# Study data files\n",
-    "mouse_metadata_path = \"Data/Mouse_metadata.csv\"\n",
-    "study_results_path = \"Data/Study_results.csv\"\n",
-    "\n",
-    "# Read the mouse data and the study results\n",
-    "mouse_metadata = pd.read_csv(mouse_metadata_path)\n",
-    "study_results = pd.read_csv(study_results_path)\n",
-    "\n",
-    "# Combine the data into a single dataset\n",
-    "merged_data_df = pd.merge(mouse_metadata, study_results, how=\"outer\", on=\"Mouse ID\")\n",
-    "# Display the data table for preview\n",
-    "merged_data_df"
+    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
+    "cleaned_list = merged_data_df.drop([908,910,912,914,916], axis=0)\n",
+    "cleaned_list.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1888"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Checking the number of mice.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Getting the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional: Get all the data for the duplicate mouse ID. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Checking the number of mice in the clean DataFrame.\n"
+    "# Checking the number of mice in the clean DataFrame.\n",
+    "cleaned_list[\"Mouse ID\"].count()"
    ]
   },
   {
